--- a/src/widgets/footer/ui/Footer.css
+++ b/src/widgets/footer/ui/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #333;
-    color: white;
+    background: linear-gradient(135deg, var(--bg-color) 0%, var(--product-bg) 100%);
+    color: var(--text-color);
     padding: 2rem 0 1rem;
     margin-top: auto;
     min-width: 100vw;
@@ -24,7 +24,7 @@
 
 .footer-section h3 {
     margin-bottom: 1rem;
-    color: #fff;
+    color:var(--text-color);
 }
 
 .footer-section p {
@@ -42,7 +42,7 @@
 }
 
 .footer-section a {
-    color: #ccc;
+    color: var(--text-color);
     text-decoration: none;
     transition: color 0.3s;
 }
